--- a/staff/ana-delrio/backend/api/package.json
+++ b/staff/ana-delrio/backend/api/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "http": "^0.0.1-security"
+  }
 }
