--- a/staff/anna-cuenca/backend/api.5/package.json
+++ b/staff/anna-cuenca/backend/api.5/package.json
@@ -8,8 +8,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "description": ""
 }
