--- a/staff/anna-cuenca/backend/zzz/api.8/package.json
+++ b/staff/anna-cuenca/backend/zzz/api.8/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "express": "^4.18.2"
   }
 }
