--- a/staff/anna-cuenca/fullstack/api/package.json
+++ b/staff/anna-cuenca/fullstack/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   }
 }
