--- a/staff/leslie-gutierrez/fullstack/api/package.json
+++ b/staff/leslie-gutierrez/fullstack/api/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node .", 
+    "watch": "node --watch .",
+    "inspect": "--inspect-brk .", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
