--- a/staff/leslie-gutierrez/fullstack/app/package.json
+++ b/staff/leslie-gutierrez/fullstack/app/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start":"node .", 
+    "watch": "node --watch .",
+    "inspect": "--inspect-brk .", 
+    "test":"echo\"Error: no test specified\" && exit 1", 
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
