--- a/staff/abel-prieto/FULLSTACK/API/package.json
+++ b/staff/abel-prieto/FULLSTACK/API/package.json
@@ -4,9 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "watch": "node --watch .",
-    "inspect": "node --inspect-brk",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "mongoose": "^8.0.3"
   }
 }
