--- a/staff/belen-ivars/fullstack/api-old/package.json
+++ b/staff/belen-ivars/fullstack/api-old/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "express": "^4.18.2"
   }
 }
