--- a/staff/leslie-gutierrez/fullstack/zzz/app.2/package.json
+++ b/staff/leslie-gutierrez/fullstack/zzz/app.2/package.json
@@ -1,19 +1,18 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
+    "start":"node .", 
     "watch": "node --watch .",
-    "inspect": "node --inspect-brk .",
+    "inspect": "--inspect-brk .", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "express": "^4.18.2"
   }
 }
