--- a/staff/manuel-barzi/fullstack/zzz/api.5/package.json
+++ b/staff/manuel-barzi/fullstack/zzz/api.5/package.json
@@ -8,8 +8,7 @@
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
     "test": "mocha logic/*.spec.js",
-    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
-    "test-coverage": "nyc --cache=false --reporter=text-summary --reporter=html mocha logic/*.spec.js"
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +21,7 @@
   },
   "devDependencies": {
     "chai": "^5.0.0",
-    "esm": "^3.2.25",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0"
+    "mocha": "^10.2.0"
   },
   "type": "module"
 }
