--- a/staff/ana-delrio/fullstack/api/package.json
+++ b/staff/ana-delrio/fullstack/api/package.json
@@ -7,7 +7,8 @@
     "start": "node .",
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha logic/*.spec.js",
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,9 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "chai": "^5.0.0",
+    "mocha": "^10.2.0"
   }
 }
