--- a/staff/belen-ivars/fullstack/api/package.json
+++ b/staff/belen-ivars/fullstack/api/package.json
@@ -8,7 +8,8 @@
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
     "test": "mocha logic/*.spec.js",
-    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
+    "test-coverage": "nyc --cache=false --reporter=text-summary --reporter=html mocha logic/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +17,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
+    "esm": "^3.2.25",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "chai": "^5.0.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
   },
   "type": "module"
 }
