--- a/staff/ana-delrio/fullstack/api/package.json
+++ b/staff/ana-delrio/fullstack/api/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.0.3"
@@ -21,5 +23,6 @@
   "devDependencies": {
     "chai": "^5.0.0",
     "mocha": "^10.2.0"
-  }
+  },
+  "type": "module"
 }
