--- a/staff/ana-delrio/fullstack/api/.env
+++ b/staff/ana-delrio/fullstack/api/.env
@@ -1,2 +1,4 @@
-MONGODB_URL = mongodb://127.0.0.1:27017/test
+MONGODB_URL = mongodb://127.0.0.1:27017/api
+TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
+
 PORT = 8000
