--- a/staff/josem-cembrano/fullstack/api/package.json
+++ b/staff/josem-cembrano/fullstack/api/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.1.0"
   }
 }
