--- a/staff/isabel-dominguez/fullstack/api/package.json
+++ b/staff/isabel-dominguez/fullstack/api/package.json
@@ -9,7 +9,8 @@
     "inspect": "node --inspect-brk .",
     "test": "mocha logic/*.spec.js",
     "test-inspect": "mocha --inspect-brk logic/*.spec.js",
-    "test-coverage": "nyc --cache=false --reporter=text-summary --reporter=html mocha logic/*.spec.js"
+    "test-coverage": "nyc --cache=false --reporter=text-summary --reporter=html mocha logic/*.spec.js",
+    "test-what": "mocha"
   },
   "keywords": [],
   "author": "",
