implement add comments logic in api #292 & add errors typing in app logic #293

--- a/staff/anna-cuenca/fullstack/api/.env
+++ b/staff/anna-cuenca/fullstack/api/.env
@@ -2,3 +2,4 @@ MONGODB_URL = mongodb://127.0.0.1:27017/api
 TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
 PORT = 9000
 JWT_SECRET = me gustan las patatas fritas
+JWT_EXP = 1h
