--- a/staff/ana-delrio/fullstack/api/package.json
+++ b/staff/ana-delrio/fullstack/api/package.json
@@ -8,7 +8,9 @@
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
     "test": "mocha logic/*.spec.js",
-    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
+    "test-what": "mocha",
+    "test-inspect-what": "mocha --inspect-brk"
   },
   "keywords": [],
   "author": "",
