--- a/staff/ana-delrio/fullstack/api/.env
+++ b/staff/ana-delrio/fullstack/api/.env
@@ -2,3 +2,4 @@ MONGODB_URL = mongodb://127.0.0.1:27017/api
 TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
 
 PORT = 8000
+JWT_SECRET = el padre de mi abuela tenía una doble vida
