--- a/staff/abel-prieto/FULLSTACK/APP/package.json
+++ b/staff/abel-prieto/FULLSTACK/APP/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "com": "link:..\\com",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
