--- a/staff/josem-cembrano/fullstack/api/package.json
+++ b/staff/josem-cembrano/fullstack/api/package.json
@@ -7,14 +7,25 @@
     "start": "node .",
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha logic/*.spec.js",
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
+    "test-coverage": "nyc --cache=false --reporter=text-summary --reporter=html mocha logic/*.spec.js",
+    "test-what": "mocha",
+    "test-inspect-what": "mocha --inspect-brk"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0"
-  }
+  },
+  "devDependencies": {
+    "chai": "^5.0.3",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
+  },
+  "type": "module"
 }
