--- a/staff/abel-prieto/FULLSTACK/API/package.json
+++ b/staff/abel-prieto/FULLSTACK/API/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "com": "link:..\\com",
+    "com": "file:../COM",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
