--- a/staff/abel-prieto/FULLSTACK/APP/package.json
+++ b/staff/abel-prieto/FULLSTACK/APP/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "com": "link:..\\com",
+    "com": "file:../COM",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
