--- a/staff/belen-ivars/fullstack/app/package.json
+++ b/staff/belen-ivars/fullstack/app/package.json
@@ -8,9 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass": "sass src",
+    "sass-watch": "sass src --watch"
   },
   "dependencies": {
+    "com": "link:../com",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
