--- a/staff/judy-grayland/fullstack/zzz/api.3/package.json
+++ b/staff/judy-grayland/fullstack/zzz/api.3/package.json
@@ -7,8 +7,7 @@
     "start": "node .",
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
-    "test": "mocha logic/*.spec.js",
-    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +16,5 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0"
-  },
-  "devDependencies": {
-    "chai": "^5.0.3",
-    "mocha": "^10.2.0"
   }
 }
