--- a/staff/tano-aleu/fullstack/app/package.json
+++ b/staff/tano-aleu/fullstack/app/package.json
@@ -4,10 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass": "sass src",
+    "sass-watch": "sass src --watch"
   },
   "dependencies": {
     "react": "^18.2.0",
