--- a/staff/judy-grayland/fullstack/api/package.json
+++ b/staff/judy-grayland/fullstack/api/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0"
@@ -21,5 +22,6 @@
   "devDependencies": {
     "chai": "^5.0.3",
     "mocha": "^10.2.0"
-  }
+  },
+  "type": "module"
 }
