--- a/staff/abel-prieto/FULLSTACK/API/package.json
+++ b/staff/abel-prieto/FULLSTACK/API/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bson": "^6.3.0",
     "com": "file:../COM",
     "cors": "^2.8.5",
