--- a/staff/josem-cembrano/fullstack/api/.env
+++ b/staff/josem-cembrano/fullstack/api/.env
@@ -1,3 +1,5 @@
 MONGODB_URL = mongodb://127.0.0.1:27017/api
 TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
 PORT = 9000
+JWT_SECRET = hugo me lo regalo sonia
+JWT_EXPIRATION = 1h
