--- a/staff/josem-cembrano/fullstack/app/package.json
+++ b/staff/josem-cembrano/fullstack/app/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.10"
   },
   "dependencies": {
