--- a/staff/belen-ivars/fullstack/api/package.json
+++ b/staff/belen-ivars/fullstack/api/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "com": "link:../com",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
