implement automated tests for create post, retrieve posts, toggle fav post and toggle like post logics; refactor tests and handlers into promises #322

--- a/staff/judy-grayland/fullstack/api/package.json
+++ b/staff/judy-grayland/fullstack/api/package.json
@@ -8,7 +8,9 @@
     "watch": "node --watch .",
     "inspect": "node --inspect-brk .",
     "test": "mocha logic/*.spec.js",
-    "test-inspect": "mocha --inspect-brk logic/*.spec.js"
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
+    "test-one": "mocha",
+    "test-inspect-one": "mocha --inspect-brk"
   },
   "keywords": [],
   "author": "",
