--- a/staff/josem-cembrano/fullstack/api/package.json
+++ b/staff/josem-cembrano/fullstack/api/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "com": "link:..\\com",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
