--- a/staff/josem-cembrano/fullstack/app/package.json
+++ b/staff/josem-cembrano/fullstack/app/package.json
@@ -21,7 +21,8 @@
     "com": "link:..\\com",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "type": "module"
 }
