--- a/staff/tano-aleu/fullstack/app/package.json
+++ b/staff/tano-aleu/fullstack/app/package.json
@@ -8,11 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "sass": "sass src",
-    "sass-watch": "sass src --watch"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "com": "link:../com",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,10 +21,13 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.0"
   }
 }
