--- a/staff/judy-grayland/fullstack/api/.env
+++ b/staff/judy-grayland/fullstack/api/.env
@@ -2,3 +2,4 @@ MONGODB_URL = mongodb://127.0.0.1:27017/test
 MONGODB_URL_TEST = mongodb://127.0.0.1:27017/temp
 PORT = 8000
 JWT_SECRET = no me gusta el cilantro
+JWT_EXP = 5s
