--- a/staff/josem-cembrano/fullstack/app/package.json
+++ b/staff/josem-cembrano/fullstack/app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "classnames": "^2.5.1",
     "com": "link:..\\com",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
