--- a/staff/anna-cuenca/project/api/package.json
+++ b/staff/anna-cuenca/project/api/package.json
@@ -20,8 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "johnny-five": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "serialport": "^12.0.0",
+    "sinon": "^17.0.1",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "chai": "^5.1.0",
