create logic/spec/handler => authenticateAdmin.js and somes dependencies #400

--- a/staff/josem-cembrano/project/api/.env
+++ b/staff/josem-cembrano/project/api/.env
@@ -1,5 +1,5 @@
-MONGODB_URL = mongodb://127.0.0.1:27017/project
+MONGODB_URL_PROYECT = mongodb://127.0.0.1:27017/project
 TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
 PORT = 9000
-JWT_SECRET = me gustan las patatas fritas
+JWT_SECRET = hugo me lo regalo una ex
 JWT_EXP = 1h
