--- a/staff/josem-cembrano/project/api/package.json
+++ b/staff/josem-cembrano/project/api/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "com": "link:..\\com",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
