--- a/staff/abel-prieto/PROYECT/API/package.json
+++ b/staff/abel-prieto/PROYECT/API/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chai": "^5.1.0",
+    "com": "link:..\\com",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
