--- a/staff/abel-prieto/PROYECT/API/package.json
+++ b/staff/abel-prieto/PROYECT/API/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chai": "^5.1.0",
-    "com": "link:..\\com",
+    "com": "file:../com",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.3.0",
     "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1",
     "pnpm": "^8.15.2"
   },
   "type": "module"
