--- a/staff/judy-grayland/project/api/package.json
+++ b/staff/judy-grayland/project/api/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "api",
   "version": "1.0.0",
   "description": "",
@@ -10,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
