--- a/staff/judy-grayland/project/api/package.json
+++ b/staff/judy-grayland/project/api/package.json
@@ -5,7 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "start": "node .",
+    "inspect": "node --inspect-brk .",
+    "test": "mocha logic/*.spec.js",
+    "test-inspect": "mocha --inspect-brk logic/*.spec.js",
+    "test-one": "mocha",
+    "test-inspect-one": "mocha --inspect-brk"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "shared": "link:../shared"
   },
   "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0"
   }
 }
