--- a/staff/anna-cuenca/project/api/package.json
+++ b/staff/anna-cuenca/project/api/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "johnny-five": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lcd-scrolling": "^1.0.2",
     "mongoose": "^8.1.2",
     "serialport": "^12.0.0",
     "sinon": "^17.0.1",
