--- a/staff/abel-prieto/PROYECT/API/package.json
+++ b/staff/abel-prieto/PROYECT/API/package.json
@@ -17,7 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.3.0",
     "mongoose": "^8.1.2",
-    "multer": "1.4.5-lts.1",
+    "multer": "^1.4.5-lts.1",
     "pnpm": "^8.15.2"
   },
   "type": "module"
