--- a/staff/abel-prieto/PROYECT/HiInit/package.json
+++ b/staff/abel-prieto/PROYECT/HiInit/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "com": "file:../com",
     "dotenv": "^16.4.4",
+    "pnpm": "^8.15.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
