--- a/staff/abel-prieto/PROYECT/API/package.json
+++ b/staff/abel-prieto/PROYECT/API/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
     "chai": "^5.1.0",
     "com": "file:../com",
     "cors": "^2.8.5",
