--- a/staff/tano-aleu/project/app/package.json
+++ b/staff/tano-aleu/project/app/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@fseehawer/react-circular-slider": "^2.6.4",
-    "classnames": "^2.5.1",
     "com": "link:../com",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "tone": "^14.7.77"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
