--- a/staff/anna-cuenca/project/api/package.json
+++ b/staff/anna-cuenca/project/api/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "lcd-scrolling": "^1.0.2",
     "mongoose": "^8.1.2",
+    "oled-js": "^5.1.2",
     "serialport": "^12.0.0",
     "sinon": "^17.0.1",
     "socket.io": "^4.7.4"
