--- a/staff/tano-aleu/project/api/package.json
+++ b/staff/tano-aleu/project/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
+    "start": "node src/index.js",
     "watch": "node --watch",
     "inspect": "node --inspect-brk",
     "test": "mocha logic/*spec.js",
