add previous version

--- a/staff/josem-cembrano/project/api/.env
+++ b/staff/josem-cembrano/project/api/.env
@@ -1,5 +1,8 @@
 MONGODB_URL_PROYECT = mongodb://127.0.0.1:27017/project
 TEST_MONGODB_URL = mongodb://127.0.0.1:27017/test
-PORT = 9000
+PORT = 8888
 JWT_SECRET = hugo me lo regalo una ex
-JWT_EXP = 1h
+JWT_EXPIRATION = 1h
+
+EMAIL=projectisdiproject@gmail.com
+EMAIL_PASSWORD=123123123BcgmJmcm
