--- a/staff/josem-cembrano/project/api/package.json
+++ b/staff/josem-cembrano/project/api/package.json
@@ -16,16 +16,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@heroicons/react": "^2.1.1",
     "bcryptjs": "^2.4.3",
+    "chai-as-promised": "^7.1.1",
+    "classnames": "^2.5.1",
     "com": "link:..\\com",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "chai": "^5.1.0",
-    "mocha": "^10.3.0"
+    "mocha": "^10.3.0",
+    "sinon": "^17.0.1"
   },
   "type": "module"
 }
