--- a/staff/tano-aleu/project/app/package.json
+++ b/staff/tano-aleu/project/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fseehawer/react-circular-slider": "^2.6.4",
     "classnames": "^2.5.1",
+    "com": "file:../com",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
@@ -22,10 +23,12 @@
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "chai": "^5.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "mocha": "^10.4.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
