--- a/staff/tano-aleu/project/app/package.json
+++ b/staff/tano-aleu/project/app/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "startaudiocontext": "^1.2.1",
     "tone": "^14.7.77"
   },
   "devDependencies": {
