--- a/staff/josem-cembrano/project/app/package.json
+++ b/staff/josem-cembrano/project/app/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.1",
+    "@mui/material": "^5.15.15",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "com": "link:..\\com",
+    "flowbite-react": "^0.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
