--- a/staff/josem-cembrano/project/api/package.json
+++ b/staff/josem-cembrano/project/api/package.json
@@ -19,6 +19,7 @@
     "@faker-js/faker": "^8.4.1",
     "@heroicons/react": "^2.1.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "5",
     "chai-as-promised": "^7.1.1",
     "classnames": "^2.5.1",
     "com": "link:..\\com",
@@ -28,10 +29,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "multer": "1.4.5-lts.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "react-bootstrap": "2.9.0-beta.1"
   },
   "devDependencies": {
-    "chai": "^5.1.0",
+    "chai": "^4.4.1",
     "mocha": "^10.3.0",
     "sinon": "^17.0.1"
   },
