add logic/handlers and compo contact-form and fixed several general bugs

--- a/staff/josem-cembrano/project/api/.env
+++ b/staff/josem-cembrano/project/api/.env
@@ -6,3 +6,8 @@ JWT_EXPIRATION = 1h
 
 EMAIL=projectisdiproject@gmail.com
 EMAIL_PASSWORD=123123123BcgmJmcm
+
+HOST=smtp-relay.brevo.com
+PORT_CONTAC=587
+USER=chemaisdi@gmail.com
+PASSWORD=t7fq0PL6O89Cr4dY
