--- a/staff/josem-cembrano/project/app/package.json
+++ b/staff/josem-cembrano/project/app/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.22.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
